--- a/index.html
+++ b/index.html
@@ -24,8 +24,21 @@
 
 <body>
     <!--Container-->
-    <div class="container">
-        <h1>My container Fixed</h1>
+    <div class="container-fluid">
+        <!--INICIO DA ROW-->
+        <div class="row">
+            <!--ASIDE-->
+            <aside class="col-md-4 col-lg-10">
+                Aside
+            </aside>
+
+            <!--Article-->
+            <article class="col-md-8 col-lg-2">
+                My article
+            </article>
+        </div>
+        <!--FIM DA ROW-->
+
     </div>
 
 
