Comandos de grade e listas atribuido a pagina.

--- a/index.html
+++ b/index.html
@@ -38,14 +38,47 @@
             </article>
         </div>
         <!--FIM DA ROW-->
-
     </div>
-
-
-
-
+    <!--Inicio da row-->
+    <div class="row">
+        <div class=" col-md-4">
+            <h1>Olá !</h1>
+            <p class="text-left">texto a esquerda</p>
+            <p clas="text-center">texto no centro</p>
+            <p class="text-right">texto a direita</p>
+            <p class="text-justify">texto justificado</p>
+        </div>
+        <div class="col-md-8">
+            <h2>Outros</h2>
+            <p class="text-lowercase">TEXTO DIMINUIDO</p>
+            <p clas="text-uppercase">texto aumentado</p>
+            <p class="capitalize">primeira letra maiscula.</p>
+        </div>
+    </div>
+    <!--Fim da row-->
+    <div class="row">
+        <div class="col-md-12">
+            <ul class=" list-unstyled list-inline">
+                <li>Item 1</li>
+                <li>Item 2</li>
+                <li>Item 3</li>
+                <ul>
+                    <li>Nome</li>
+                    <li>Nome</li>
+                    <li>Nome</li>
+                </ul>
+                <li>Item 4</li>
+                <li>Item 5</li>
+                <li>Item 6</li>
+            </ul>
+        </div>
+    </div>
+    <!--SCRIPTS-->
     <script src="bootstrap/js/bootstrap.min.js" />
+
 
 </body>
 
 </html>
+
+//@Allysonubius Criador deste projeto inicial com Bootstrap. //Direitos reservados.
