Criado page tabela.html.

--- a/index.html
+++ b/index.html
@@ -55,30 +55,34 @@
             <p class="capitalize">primeira letra maiscula.</p>
         </div>
     </div>
-    <!--Fim da row-->
-    <div class="row">
-        <div class="col-md-12">
-            <ul class=" list-unstyled list-inline">
-                <li>Item 1</li>
-                <li>Item 2</li>
-                <li>Item 3</li>
-                <ul>
-                    <li>Nome</li>
-                    <li>Nome</li>
-                    <li>Nome</li>
+    <div class="container">
+        <!--Fim da row-->
+        <div class="row">
+            <div class="col-md-12">
+                <ul class=" list-unstyled list-inline">
+                    <li>Item 1</li>
+                    <li>Item 2</li>
+                    <li>Item 3</li>
+                    <ul>
+                        <li>Nome</li>
+                        <li>Nome</li>
+                        <li>Nome</li>
+                    </ul>
+                    <li>Item 4</li>
+                    <li>Item 5</li>
+                    <li>Item 6</li>
                 </ul>
-                <li>Item 4</li>
-                <li>Item 5</li>
-                <li>Item 6</li>
-            </ul>
+            </div>
         </div>
     </div>
     <!--SCRIPTS-->
-    <script src="bootstrap/js/bootstrap.min.js" />
+    <script src="bootstrap/js/bootstrap.min.js">
+    </script>
 
 
 </body>
 
 </html>
 
-//@Allysonubius Criador deste projeto inicial com Bootstrap. //Direitos reservados.
+<!--@Allysonubius Criador deste projeto inicial com Bootstrap. 
+Direitos reservados.-->
