--- a/tabela.html
+++ b/tabela.html
@@ -55,6 +55,7 @@
                     </tbody>
                 </table>
             </div>
+            <!--Table responsive-->
         </div>
     </div>
 
