--- a/menu.html
+++ b/menu.html
@@ -24,17 +24,23 @@
 <!--Conteudo-->
 
 <body>
+    <!--MENU-->
     <div class="menu-bg navbar-fixed-top">
         <nav class="nav navbar-default">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <a class="col-md-1 navbar-brand" href="#">
-                        <img alt="brand" src="img/bootstrap-favicon.png" width="70" /> <span class="menu-text">Bootstrap</span>
+                    <a class="col-md-7 navbar-brand" href="#">
+                        <img alt="brand" src="img/bootstrap-favicon.png" width="70" /> <span class="menu-logo">Bootstrap</span>
                     </a>
+                    <a class="col-md-1 menu-text" href="#">Home</a>
+                    <a class="col-md-1 menu-text" href="#">Conteudo</a>
+                    <a class="col-md-1 menu-text" href="#">Sobre</a>
+                    <a class="col-md-2 menu-text" href="#">Contato</a>
                 </div>
             </div>
         </nav>
     </div>
+    <!--CONTEUDO-->
 
 
     <!--grade-->
@@ -79,7 +85,7 @@
     <!--Container-->
     <!--SCRIPTS-->
 
-
+    <script href="bootsrap/js/bootsttrap.js" />
     <!--Rodape-->
 
     <footer class="container-fluid rodape col-md-12  ">
@@ -90,6 +96,8 @@
 
 </html>
 
+<!--@Allysonubius Criador deste projeto inicial com Bootstrap. 
+Direitos reservados.-->
 <!--@Allysonubius Criador deste projeto inicial com Bootstrap. 
 Direitos reservados.-->
 <!--@Allysonubius Criador deste projeto inicial com Bootstrap. 
